force-app/main/default/objects/Savings_Account__c/Savings_Account__c.object-meta.xml
<CustomObject>
    <label>Savings Account</label>
    <nameField>
        <label>Savings Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Savings Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>