force-app/main/default/objects/Savings_Account__c/fields/Investable_Fund__c.field-meta.xml
<CustomField>
    <fullName>Investable_Fund__c</fullName>
    <formula>Last_Balance__c -  Emergency_Fund__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Investable Fund</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>