force-app/main/default/objects/Savings_Account__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Bank__c</columns>
    <columns>Last_Balance__c</columns>
    <columns>Emergency_Fund__c</columns>
    <columns>Investable_Fund__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>